infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving
  labels:
    app: argus-serving
spec:
  selector:
    app: argus-serving
  ports:
    - name: http
      port: 80
      targetPort: http
